--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <button class="operator">-</button>
         <button class="number">0</button>
         <button>.</button>
-        <button>=</button>
+        <button id="equals">=</button>
         <button class="operator">+</button>
       </div>
       <button id="clear">AC</button>
