--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <button class="number">3</button>
         <button class="operator">-</button>
         <button class="number">0</button>
-        <button>.</button>
+        <button id="dot">.</button>
         <button id="equals">=</button>
         <button class="operator">+</button>
       </div>
